# fastmcp-test

./: README.md  app.py  pyproject.toml
openmeteo_mcp/: open_meteo.py  server.py
src/openmeteo_mcp/: __init__.py
tests/: test_open_meteo.py  test_server.py  test_vercel_app.py
